syntax = "proto3";

package proto;

message User {
  // @inject_tag: bson:"_id"
  string id = 1;
  string email = 2;
  string name = 3;
  string password = 4;
}

message CreateUserRequest { User user = 1; }

message CreateUserResponse {
  bool success = 1;
  string error = 2;
  string id = 3;
}

message VerifyUserRequest {
  string email = 1;
  string password = 2;
}

message VerifyUserResponse {
  bool success = 1;
  string error = 2;
  User user = 3;
}
